# ModelBenchX

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adding-a-framework.md  design.md
src/modelbenchx/: __init__.py  cli.py  config.py  environment.py  naming.py  orchestrator.py  registry.py  results.py
src/modelbenchx/backends/: __init__.py  base.py
src/modelbenchx/metrics/: __init__.py  accuracy.py  timing.py
src/modelbenchx/report/: __init__.py  _collect.py  csv_report.py  json_report.py  markdown.py
src/modelbenchx/workers/: __init__.py  _bench.py  _feedgen.py  _harness.py  _inputs.py  _io.py  _protocol.py  coreai_worker.py  coreml_worker.py  onnx_worker.py  synth_worker.py  tflite_worker.py
tests/: __init__.py  _synth_backend.py  test_backends.py  test_bench_and_config.py  test_cache.py  test_cli.py  test_discovery.py  test_environment.py  test_feedgen.py  test_harness.py  test_inputs.py  test_io.py  test_metrics.py  test_naming.py  test_orchestrator.py  test_protocol.py  test_registry.py  test_report.py  test_results.py  test_tflite.py  test_thermal.py
